# se-toolkit-lab-8

./: .env.docker.example  .gitignore  .gitmodules  AGENTS.md  README.md  REPORT.md  docker-compose.yml  flake.nix  pyproject.toml
.agents/skills/cleanup-file-review/: SKILL.md
.agents/skills/find-empty-sections/: SKILL.md
.agents/skills/find-incomplete-sections/: SKILL.md
.agents/skills/pr/: SKILL.md
contributing/: configuration.md
contributing/conventions/: conventions.md
contributing/conventions/agents/: agents.md  authoring.md  skills.md
contributing/conventions/git/: commits.md
contributing/conventions/implementation/: code.md
contributing/conventions/meetings/: meeting-report.md
contributing/conventions/writing/: common.md  lab.md  setup.md  tasks.md  wiki.md
docs/design/: architecture.md
frontend/: Dockerfile
instructors/: README.md  ideas.md  lab-plan.md
instructors/file-reviews/: AGENTS.md
lab/tasks/: setup-simple.md  setup.md
lab/tasks/optional/: task-1.md
lab/workflow/: approval-log.md  pr-checklist.md
mcp/: pyproject.toml
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  observability.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  entrypoint.py
wiki/: client-web-react-dotenv-secret.md  coding-agents.md  docker-compose-yml.md  dotenv-agent-secret.md  dotenv-docker-secret.md  file-system.md  git.md  linux.md  llm.md  lms-api-deployment.md  lms-api.md  lms-client-web-react.md  nodejs.md  operating-system.md  qwen-code-api.md  vm-hardening.md  vs-code.md
(+11 files in other folders)
